[package]
name = "image2latex"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.0", features = ["image", "tokio"] }
arboard = "3.4"
image = "0.25"
base64 = "0.22.1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
ureq = "3.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["time", "sync"] }
regex = "1.11.1"
hex = "0.4.3"
anyhow = "1.0"
aes-gcm = "0.10.3"
dirs = "6.0.0"

# Candle ML dependencies for TrOCR and PaddleOCR-VL
# Use local candle-transformers for PaddleOCR-VL support
candle-core = { path = ".extern/candle-main/candle-core", features = ["cuda", "cudnn"]  }
candle-nn = { path = ".extern/candle-main/candle-nn", features = ["cuda", "cudnn"]  }
candle-transformers = { path = ".extern/candle-main/candle-transformers", features = ["cuda", "cudnn"]  }
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.21"
sysinfo = "0.38.0"
pastey = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3.4", features = ["wayland-data-control"] }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
